--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900;1000&display=swap');
+@import url('https://api.fontshare.com/v2/css?f[]=satoshi@1&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
